feat: add `networks/config` api that returns all config details (#555)
feat: add mastodon related config details (#556)


feat: change rss to object and add default network endpoint url (#557)


feat: add title and key in config detail (#558)


chore: reorder the worker configs (#559)

fix: change mastodon endpoint type to string (#560)


feat: add default value and type for worker endpoint config
