# internal/node/component/info/handler_network.go
@@ -1,143 +1,127 @@
 package info
 
 import (
-	"fmt"
 	"net/http"
+	"sort"
 
 	"github.com/labstack/echo/v4"
-	"github.com/rss3-network/node/schema/worker"
-	"github.com/rss3-network/node/schema/worker/decentralized"
 	"github.com/rss3-network/node/schema/worker/rss"
 	"github.com/rss3-network/protocol-go/schema/network"
+	"github.com/samber/lo"
 )
 
-type Request struct {
-	Network string `param:"network" validate:"required"`
+type NetworkConfigResponse struct {
+	Data NetworkConfig `json:"data"`
 }
 
-type WorkerRequest struct {
-	Network string `param:"network" validate:"required"`
-	Worker  string `param:"worker" validate:"required"`
+type NetworkConfig struct {
+	RSS           NetworkConfigDetailForRSS `json:"rss,omitempty"`
+	Decentralized []NetworkConfigDetail     `json:"decentralized,omitempty"`
+	Federated     []NetworkConfigDetail     `json:"federated,omitempty"`
 }
 
-type Response struct {
-	Data []string `json:"data"`
+type NetworkConfigDetail struct {
+	ID             string         `json:"id,omitempty"`
+	EndpointConfig *Endpoint      `json:"endpoint_configs,omitempty"`
+	WorkerConfig   []workerConfig `json:"worker_configs,omitempty"`
 }
 
-type ListWorkerResponse struct {
-	Data []worker.Worker `json:"data"`
+type NetworkConfigDetailForRSS struct {
+	ID             string       `json:"id,omitempty"`
+	EndpointConfig *Endpoint    `json:"endpoint_configs,omitempty"`
+	WorkerConfig   workerConfig `json:"worker_configs,omitempty"`
 }
 
-type WorkerConfigResponse struct {
-	Data workerConfig `json:"data"`
+// GetNetworkConfig returns the configuration for all supported networks.
+func (c *Component) GetNetworkConfig(ctx echo.Context) error {
+	go c.CollectMetric(ctx.Request().Context(), ctx.Request().RequestURI, "config")
+
+	config := NetworkConfig{
+		RSS:           getNetworkConfigDetailForRSS(network.RSSSource),
+		Decentralized: getNetworkConfigDetail(network.ArweaveSource, network.EthereumSource, network.FarcasterSource, network.NearSource),
+		Federated:     getNetworkConfigDetail(network.ActivityPubSource),
+	}
+
+	return ctx.JSON(http.StatusOK, NetworkConfigResponse{Data: config})
 }
 
-type EndpointConfigResponse struct {
-	Data Endpoint `json:"data"`
+func getNetworkConfigDetailForRSS(source network.Source) NetworkConfigDetailForRSS {
+	n := source.Networks()[0]
+	worker := rss.RSSHub
+	config := WorkerToConfigMap[source][worker]
+
+	workerConfig := config
+	workerConfig.ID.Value = n.String() + "-" + worker.Name()
+	workerConfig.Network.Value = n.String()
+	workerConfig.MinimumResource = calculateMinimumResources(n, worker)
+
+	return NetworkConfigDetailForRSS{
+		ID:           n.String(),
+		WorkerConfig: workerConfig,
+	}
 }
 
-// GetNetworksHandler returns the list of all networks that the node can support.
-func (c *Component) GetNetworksHandler(ctx echo.Context) error {
-	go c.CollectMetric(ctx.Request().Context(), ctx.Request().RequestURI, "networks")
+func getNetworkConfigDetail(sources ...network.Source) []NetworkConfigDetail {
+	var details []NetworkConfigDetail
 
-	networkList := network.NetworkValues()
+	for _, s := range sources {
+		for _, n := range s.Networks() {
+			if n == network.Unknown || n == network.SatoshiVM || n == network.Bitcoin {
+				continue
+			}
 
-	result := make([]string, 0)
+			networkDetail := NetworkConfigDetail{
+				ID:           n.String(),
+				WorkerConfig: []workerConfig{},
+			}
 
-	for _, item := range networkList {
-		networkStr := item.String()
-		// skip unknown and some networks
-		if networkStr == network.Unknown.String() || networkStr == network.Bitcoin.String() || networkStr == network.SatoshiVM.String() {
-			continue
+			if s != network.RSSSource {
+				endpointConfig := getEndpointConfig(n)
+				networkDetail.EndpointConfig = &endpointConfig
+			}
+
+			workerConfigs := getWorkerConfigs(s, n)
+			sort.Slice(workerConfigs, func(i, j int) bool {
+				if workerConfigs[i].Worker.Value == "core" {
+					return true
+				}
+
+				if workerConfigs[j].Worker.Value == "core" {
+					return false
+				}
+
+				return workerConfigs[i].Worker.Value.(string) < workerConfigs[j].Worker.Value.(string)
+			})
+
+			networkDetail.WorkerConfig = workerConfigs
+
+			if len(networkDetail.WorkerConfig) > 0 {
+				details = append(details, networkDetail)
+			}
 		}
-
-		result = append(result, networkStr)
 	}
 
-	return ctx.JSON(http.StatusOK, Response{
-		Data: result,
-	})
+	return details
 }
 
-// GetWorkersByNetwork returns list of all workers for the specified network.
-func (c *Component) GetWorkersByNetwork(ctx echo.Context) error {
-	var request Request
+func getWorkerConfigs(s network.Source, n network.Network) []workerConfig {
+	var workerConfigs []workerConfig
 
-	if err := ctx.Bind(&request); err != nil {
-		return fmt.Errorf("bind failed: %w", err)
+	for worker, config := range WorkerToConfigMap[s] {
+		if lo.Contains(NetworkToWorkersMap[n], worker) {
+			workerConfig := config
+			workerConfig.ID.Value = n.String() + "-" + worker.Name()
+			workerConfig.Network.Value = n.String()
+			workerConfig.MinimumResource = calculateMinimumResources(n, worker)
+
+			if workerConfig.EndpointID != nil {
+				workerConfig.EndpointID.Type = StringType
+				workerConfig.EndpointID.Value = n.String()
+			}
+
+			workerConfigs = append(workerConfigs, workerConfig)
+		}
 	}
 
-	if err := ctx.Validate(&request); err != nil {
-		return fmt.Errorf("validate failed: %w", err)
-	}
-
-	go c.CollectMetric(ctx.Request().Context(), ctx.Request().RequestURI, request.Network)
-
-	nid, err := network.NetworkString(request.Network)
-
-	if err != nil {
-		return fmt.Errorf("network string failed: %w", err)
-	}
-
-	return ctx.JSON(http.StatusOK, ListWorkerResponse{
-		Data: NetworkToWorkersMap[nid],
-	})
-}
-
-// GetWorkerConfig returns the recommended configuration for the specified worker.
-func (c *Component) GetWorkerConfig(ctx echo.Context) error {
-	var (
-		request WorkerRequest
-		err     error
-	)
-
-	if err = ctx.Bind(&request); err != nil {
-		return fmt.Errorf("bind failed: %w", err)
-	}
-
-	if err = ctx.Validate(&request); err != nil {
-		return fmt.Errorf("validate failed: %w", err)
-	}
-
-	go c.CollectMetric(ctx.Request().Context(), ctx.Request().RequestURI, fmt.Sprintf("%s-%s", request.Network, request.Worker))
-
-	nid, err := network.NetworkString(request.Network)
-	if err != nil {
-		return fmt.Errorf("network string failed: %w", err)
-	}
-
-	var wid worker.Worker
-
-	switch nid.Source() {
-	case network.ActivityPubSource:
-		wid, err = decentralized.WorkerString(request.Worker) // make this case be seperated from the last one for reminder
-	case network.RSSSource:
-		wid, err = rss.WorkerString(request.Worker)
-	case network.EthereumSource, network.ArweaveSource, network.FarcasterSource, network.NearSource:
-		wid, err = decentralized.WorkerString(request.Worker)
-	}
-
-	if err != nil {
-		return fmt.Errorf("worker string failed: %w", err)
-	}
-
-	// set default values for a specific worker
-	config := WorkerToConfigMap[nid.Source()][wid]
-	config.Network.Value = nid
-
-	// calculate the minimum resources required for the worker
-	config.MinimumResource = calculateMinimumResources(nid, wid)
-
-	return ctx.JSON(http.StatusOK, WorkerConfigResponse{
-		Data: config,
-	})
-}
-
-// GetEndpointConfig returns possible configurations for an endpoint
-func (c *Component) GetEndpointConfig(ctx echo.Context) error {
-	config := getEndpointConfig()
-
-	return ctx.JSON(http.StatusOK, EndpointConfigResponse{
-		Data: config,
-	})
+	return workerConfigs
 }
